# carbon-protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mined_prompts_50k.json  miner_output_test.json  online_mining_test.json  pyproject.toml  pytest.ini  test_logs.txt  test_progress.json  test_rules.json
docs/: README.md
docs/api/: README.md
docs/architecture/: IEEE_INDUSTRY_IMPACT_REPORT.md  overview.md
docs/guides/: getting-started.md  validation-testing.md
miner/: discovery.py
src/: __init__.py  carbon_compiler.py  compiler.py  main.py  metrics.py  registry.py
src/c_isa/: __init__.py  bytecode.py  instruction.py  opcodes.py
src/compiler/: __init__.py  semantic.py
src/data/: cloud_aws.yaml  cloud_azure.yaml  cloud_gcp.yaml  core.yaml  lang_python.yaml  lang_sql.yaml  mined_fineweb.yaml  mined_openhermes.yaml  prompts_common.yaml  task_creative.yaml  task_data_analysis.yaml  task_debug.yaml  task_email.yaml  task_summary.yaml  task_translation.yaml  tech_api.yaml  tools_kubernetes.yaml
src/ingestion/: __init__.py  intent_detector.py  neuron.py  neuron_bank.py  signal_extractor.py
src/registry/: __init__.py  macro_store.py  pattern_matcher.py  skill_db.py
tests/: __init__.py  compare_results.py  conftest.py  ieee_report.py  run_all_tests.py  run_tests.py  test_compiler.py  test_industry_impact.py  test_integration.py  test_neuromorphic.py  test_registry.py  test_validation.py
tests/results/: README.md  industry_impact_assessment.json
tests/results/2026-01-17/: TSR-20260117-230537.json  TSR-20260117-230537.txt  VAL-20260117-224518.json  VAL-20260117-224518.txt  VAL-20260117-224600.json  VAL-20260117-224600.txt  VAL-20260117-230225.json  VAL-20260117-230225.txt  VAL-20260117-230537.json  VAL-20260117-230537.txt
tools/: README.md  build_dictionary.py  convert_mined_to_patterns.py
tools/miner/: __init__.py
