[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-protocol"
version = "1.1.0"
description = "High-performance deterministic semantic compression library for LLM prompts using Aho-Corasick multi-pattern matching"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Taskal Samal", email = "taskal.samal@example.com"}
]
keywords = [
    "carbon-protocol",
    "llm",
    "prompt-compression",
    "aho-corasick",
    "green-ai",
    "sustainable-ai",
    "token-reduction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "pyahocorasick>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/samaltaskal/carbon-protocol"
Documentation = "https://github.com/samaltaskal/carbon-protocol/tree/main/docs"
Repository = "https://github.com/samaltaskal/carbon-protocol"
Issues = "https://github.com/samaltaskal/carbon-protocol/issues"
Changelog = "https://github.com/samaltaskal/carbon-protocol/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["carbon_protocol"]
package-dir = {"carbon_protocol" = "src"}

[tool.setuptools.package-data]
carbon_protocol = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "validation: Validation tests",
    "slow: Slow tests",
]
